--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button id="next">Next</button>
             </section>
 
-            <section id="cash-given-section" style="display: block">
+            <section id="cash-given-section">
                 <label for="cash-given">Cash Given:</label>
                 <input type="text" id="cash-given" />
                 <button id="change-button">Give Change</button>
@@ -26,30 +26,33 @@
 
             <p id="error-message"></p>
 
-            <table class="change-table" id="notes-section">
-                <caption>
-                    Return Change
-                </caption>
-                <tr>
-                    <th>No. Of Notes</th>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                </tr>
-                <tr>
-                    <th>Notes</th>
-                    <td>2000</td>
-                    <td>500</td>
-                    <td>100</td>
-                    <td>20</td>
-                    <td>10</td>
-                    <td>1</td>
-                </tr>
-            </table>
+            <section id="notes-section">
+                <table class="change-table">
+                    <caption>
+                        Return Change
+                    </caption>
+                    <tr>
+                        <th>No. Of Notes</th>
+                        <td class="no-of-notes"></td>
+                        <td class="no-of-notes"></td>
+                        <td class="no-of-notes"></td>
+                        <td class="no-of-notes"></td>
+                        <td class="no-of-notes"></td>
+                        <td class="no-of-notes"></td>
+                        <td class="no-of-notes"></td>
+                    </tr>
+                    <tr>
+                        <th>Notes</th>
+                        <td>2000</td>
+                        <td>500</td>
+                        <td>100</td>
+                        <td>20</td>
+                        <td>10</td>
+                        <td>5</td>
+                        <td>1</td>
+                    </tr>
+                </table>
+            </section>
         </div>
         <script src="app.js" type="text/javascript"></script>
     </body>
