--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
             <p class="description">Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
 
             <section>
-                <label for="bill-amount">Bill Amount:</label>
-                <input type="text" id="bill-amount" />
-                <button id="next">Next</button>
+                <label class="label" for="bill-amount">Bill Amount:</label>
+                <input type="text" class="input-area" id="bill-amount" />
+                <button class="button" id="next">Next</button>
             </section>
 
             <section id="cash-given-section">
-                <label for="cash-given">Cash Given:</label>
-                <input type="text" id="cash-given" />
-                <button id="change-button">Give Change</button>
+                <label class="label" for="cash-given">Cash Given:</label>
+                <input type="text" class="input-area" id="cash-given" />
+                <button class="button" id="change-button">Give Change</button>
             </section>
 
             <p id="error-message"></p>
 
-            <section id="notes-section">
+            <section id="notes-section" class="output-table">
                 <table class="change-table">
-                    <caption>
+                    <caption id="caption">
                         Return Change
                     </caption>
                     <tr>
@@ -53,6 +53,26 @@
                     </tr>
                 </table>
             </section>
+            <footer>
+                <div>Connect with me on</div>
+                <ul class="list-non-bullet">
+                    <li class="list-item-inline">
+                        <a href="https://twitter.com/harshwaghela_">
+                            <img class="social-link" src="images/twitter-6.svg" />
+                        </a>
+                    </li>
+                    <li class="list-item-inline">
+                        <a href="https://github.com/styrene01">
+                            <img class="social-link" src="images/github-icon-1.svg" />
+                        </a>
+                    </li>
+                    <li class="list-item-inline">
+                        <a href="https://linkedin.com/in/harsh-waghela">
+                            <img class="social-link" src="images/linkedin-icon.svg" />
+                        </a>
+                    </li>
+                </ul>
+            </footer>
         </div>
         <script src="app.js" type="text/javascript"></script>
     </body>
